; ModuleID = '/home/carl/AnghaBench/linux/drivers/android/extr_binderfs.c_is_binderfs_control_device.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/android/extr_binderfs.c_is_binderfs_control_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dentry = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.binderfs_info* }
%struct.binderfs_info = type { %struct.dentry* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dentry*)* @is_binderfs_control_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_binderfs_control_device(%struct.dentry* %0) #0 {
  %2 = alloca %struct.dentry*, align 8
  %3 = alloca %struct.binderfs_info*, align 8
  store %struct.dentry* %0, %struct.dentry** %2, align 8
  %4 = load %struct.dentry*, %struct.dentry** %2, align 8
  %5 = getelementptr inbounds %struct.dentry, %struct.dentry* %4, i32 0, i32 0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.binderfs_info*, %struct.binderfs_info** %7, align 8
  store %struct.binderfs_info* %8, %struct.binderfs_info** %3, align 8
  %9 = load %struct.binderfs_info*, %struct.binderfs_info** %3, align 8
  %10 = getelementptr inbounds %struct.binderfs_info, %struct.binderfs_info* %9, i32 0, i32 0
  %11 = load %struct.dentry*, %struct.dentry** %10, align 8
  %12 = load %struct.dentry*, %struct.dentry** %2, align 8
  %13 = icmp eq %struct.dentry* %11, %12
  %14 = zext i1 %13 to i32
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
